--- a/templates/customer.html
+++ b/templates/customer.html
@@ -10,7 +10,7 @@
    {{#properties}}
      <div class="form-group">
     <label class="col-sm-2 control-label">Industry</label>
-    <div id ="formField-nsi_industry" class="col-sm-10" ondblclick="switchEdit('nsi_industry', '{{nsi:industry}}')">
+    <div id ="formField-nsi_industry" class="col-sm-10" ondblclick="switchEdit('nsi_industry','{{nsi:industry}}', 'vocabulary',{'directoryName':'industries'})">
       <p class="form-control-static" >{{nsi:industry}}</p>
     </div>
   </div>
@@ -24,7 +24,7 @@
 
      <div class="form-group">
     <label class="col-sm-2 control-label">Customer Business</label>
-    <div id ="formField-nsi_customer_business" class="col-sm-10" ondblclick="switchEdit('nsi_customer_business', '{{nsi:customer_business}}')">
+    <div id ="formField-nsi_customer_business" class="col-sm-10" ondblclick="switchEdit('nsi_customer_business','{{nsi:customer_business}}' ,'textarea',{})">
       <p class="form-control-static">{{nsi:customer_business}}</p>
     </div>
   </div>
@@ -59,7 +59,7 @@
 
     <div class="form-group">
     <label class="col-sm-2 control-label">Competitors</label>
-    <div class="col-sm-10">
+    <div id ="formField-nsi_competitors" class="col-sm-10" ondblclick="switchEdit('nsi_competitors', '{{nsi:competitors}}','vocabulary',{'directoryName':'competitions'})">
       <p class="form-control-static">{{nsi:competitors}} </p>
     </div>
   </div>
@@ -70,10 +70,16 @@
       <p class="form-control-static">{{nsi:competitors_comment}}</p>
     </div>
   </div>
-  {{/properties}}
-
-</form>
+   {{/properties}}
+   </form>
+   <div 
+      class="dropzone dropzone-previews"
+      id="droparea"> heine</div>
 </div>
+
+ 
+
+
 <div>
 <button onclick="browseListOfCustomers()" type="button" class="btn btn-default">Back to the list of customers</button>
 </div>
@@ -82,11 +88,32 @@
 <script id="displayReadValue">
 <p class="form-control-static" >{{.}}</p>
 </script>
+<script type="text/javascript">
+  <input type="text" class="form-control" placeholder="Text input" value ="{{}}" onblur="switchRead(this,'nsi_industry','nsi:industry')"></input>
+</script>
 
 <script id="editField-nsi_industry">
-<input type="text" class="form-control" placeholder="Text input" value ="{{.}}" onblur="switchRead(this,'nsi_industry','nsi:industry')"></input>
+
+<select class="form-control" onblur="switchRead(this,'nsi_industry','nsi:industry')">
+<option value ="">{{fieldValue}}</option>
+{{#vocabularyEntries}}
+<option value="{{id}}">{{label}}</option>
+{{/vocabularyEntries}}
+</option>
+</select>
+</script>
+
+<script id="editField-nsi_competitors">
+
+<select class="form-control" onblur="switchRead(this,'nsi_competitors','nsi:competitors')">
+<option value ="">{{fieldValue}}</option>
+{{#vocabularyEntries}}
+<option value="{{id}}">{{label}}</option>
+{{/vocabularyEntries}}
+</option>
+</select>
 </script>
 
 <script id="editField-nsi_customer_business">
-<textarea rows="4" class="form-control" placeholder="Text input" value ="{{.}}" onblur="switchRead(this,'nsi_customer_business','nsi:customer_business')"></textarea>
+<textarea id = 'formField-nsi_customer_business' rows="4" class="form-control" placeholder="Text input"  onblur="switchRead(this,'nsi_customer_business','nsi:customer_business')">{{fieldValue}}</textarea>
 </script>
