--- a/templates/listOfCustomers.html
+++ b/templates/listOfCustomers.html
@@ -1,6 +1,6 @@
 <html>
 <script id="customers-listing" type="text/html">
-<table class="table">
+<table class="table table-striped table-hover table-condensed">
       <thead>
         <tr>
           <th>#</th>
