--- a/templates/customer.html
+++ b/templates/customer.html
@@ -2,7 +2,7 @@
 <div>
 <form class="form-horizontal" role="form">
   <div class="form-group">
-    <label class="col-sm-2 control-label">Customer name</label>
+    <label id ="formField-dc_title" class="col-sm-2 control-label" ondblclick="switchToEdit('dc:title','{{dc:title}}')">Customer name</label>
     <div class="col-sm-10">
       <p class="form-control-static">{{title}}</p>
     </div>
@@ -10,7 +10,7 @@
    {{#properties}}
      <div class="form-group">
     <label class="col-sm-2 control-label">Industry</label>
-    <div id ="formField-nsi_industry" class="col-sm-10" ondblclick="switchEdit('nsi_industry','{{nsi:industry}}', 'vocabulary',{'directoryName':'industries'})">
+    <div id ="formField-nsi_industry" class="col-sm-10" ondblclick="switchToEdit('nsi:industry','{{nsi:industry}}')">
       <p class="form-control-static" >{{nsi:industry}}</p>
     </div>
   </div>
@@ -24,32 +24,30 @@
 
      <div class="form-group">
     <label class="col-sm-2 control-label">Customer Business</label>
-    <div id ="formField-nsi_customer_business" class="col-sm-10" ondblclick="switchEdit('nsi_customer_business','{{nsi:customer_business}}' ,'textarea',{})">
+    <div id ="formField-nsi_customer_business" class="col-sm-10" ondblclick="switchToEdit('nsi:customer_business','{{nsi:customer_business}}')">
       <p class="form-control-static">{{nsi:customer_business}}</p>
     </div>
   </div>
 
     <div class="form-group">
     <label class="col-sm-2 control-label">Sales rep</label>
-    <div class="col-sm-10">
+    <div class="col-sm-10" id="formField-nsi_sales_rep" ondblclick="switchToEdit('nsi:sales_rep','{{nsi:sales_rep}}')">
       <p class="form-control-static">{{nsi:sales_rep}}</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Deal history</label>
+    <div class="col-sm-10" id="formField-nsi-sales_history" ondblckick="switchToEdit('nsi:sales_history','{{nsi:sales_history}')">
+      <p class="form-control-static">{{nsi:sales_history}}</p>
     </div>
   </div>
 
     <div class="form-group">
     <label class="col-sm-2 control-label">Customer since</label>
-    <div class="col-sm-10">
+    <div class="col-sm-10" id="formfField-nsi_customer_since" ondblckick="switchToEdit('nsi:customer_since','{{nsi:customer_since}')">
       <p class="form-control-static">{{nsi:customer_since}}</p>
     </div>
   </div>
-
-    <div class="form-group">
-    <label class="col-sm-2 control-label">Deal history</label>
-    <div class="col-sm-10">
-      <p class="form-control-static">{{nsi:sales_history}}</p>
-    </div>
-  </div>
-
     <div class="form-group">
     <label class="col-sm-2 control-label">Success factors</label>
     <div class="col-sm-10">
@@ -59,26 +57,34 @@
 
     <div class="form-group">
     <label class="col-sm-2 control-label">Competitors</label>
-    <div id ="formField-nsi_competitors" class="col-sm-10" ondblclick="switchEdit('nsi_competitors', '{{nsi:competitors}}','vocabulary',{'directoryName':'competitions'})">
+    <div id ="formField-nsi_competitors" class="col-sm-10" ondblclick="switchToEdit('nsi:competitors', '{{nsi:competitors}}')">
       <p class="form-control-static">{{nsi:competitors}} </p>
     </div>
   </div>
 
     <div class="form-group">
     <label class="col-sm-2 control-label">Comment</label>
-    <div class="col-sm-10">
+    <div class="col-sm-10" id="formField-nsi_competitors_comment" ondblclick="switchToEdit('nsi:competitors_comment', '{{nsi:competitors_comment}}')" >
       <p class="form-control-static">{{nsi:competitors_comment}}</p>
     </div>
   </div>
    {{/properties}}
    </form>
-   <div 
-      class="dropzone dropzone-previews"
-      id="droparea"> heine</div>
+ 
 </div>
 
- 
+  <img id="image" src=""/>
+  <div style="width:300px">
+   <div style="width:100px;background-color:yellow;float:left" >
+   <div class="dropzone dropzone-previews"
+      id="droparea-screenshot1"></div>
+      </div>
 
+      <div style="width:100px;background-color:yellow;float:right" >
+   <div class="dropzone dropzone-previews"
+      id="droparea-screenshot2"></div>
+      </div>
+      </div>
 
 <div>
 <button onclick="browseListOfCustomers()" type="button" class="btn btn-default">Back to the list of customers</button>
@@ -88,8 +94,16 @@
 <script id="displayReadValue">
 <p class="form-control-static" >{{.}}</p>
 </script>
-<script type="text/javascript">
-  <input type="text" class="form-control" placeholder="Text input" value ="{{}}" onblur="switchRead(this,'nsi_industry','nsi:industry')"></input>
+<script id="displayList">
+<p class="form-control-static">
+{{#.}}
+<span>{{.}}</span>
+{{/.}}
+</p>
+</script>
+
+<script id="editField-dc_title">
+  <input type="text" class="form-control" placeholder="Text input" value ="{{dc:title}}" onblur="switchRead(this,'dc_title','dc:title')"></input>
 </script>
 
 <script id="editField-nsi_industry">
@@ -104,8 +118,7 @@
 </script>
 
 <script id="editField-nsi_competitors">
-
-<select class="form-control" onblur="switchRead(this,'nsi_competitors','nsi:competitors')">
+<select multiple  class="form-control" onblur="switchRead(this,'nsi_competitors','nsi:competitors')">
 <option value ="">{{fieldValue}}</option>
 {{#vocabularyEntries}}
 <option value="{{id}}">{{label}}</option>
@@ -115,5 +128,9 @@
 </script>
 
 <script id="editField-nsi_customer_business">
-<textarea id = 'formField-nsi_customer_business' rows="4" class="form-control" placeholder="Text input"  onblur="switchRead(this,'nsi_customer_business','nsi:customer_business')">{{fieldValue}}</textarea>
+<textarea rows="4" class="form-control" placeholder="Text input"  onblur="switchRead(this,'nsi_customer_business','nsi:customer_business')">{{fieldValue}}</textarea>
+</script>
+
+<script id="editField-nsi_competitors_comment">
+<textarea rows="4" class="form-control" placeholder="Text input"  onblur="switchRead(this,'nsi_competitors_comment','nsi:competitors_comment')">{{fieldValue}}</textarea>
 </script>
