--- a/templates/listOfCustomers.html
+++ b/templates/listOfCustomers.html
@@ -1,4 +1,3 @@
-<html>
 <script id="customers-listing" type="text/html">
 <table class="table table-striped table-hover table-condensed">
       <thead>
@@ -18,7 +17,7 @@
           <td>{{nsi:sales_rep}}</td>
           <td>{{nsi:customer_business}}</td>
           <td><div class="btn-group">
-  <button onclick="browseCustomer('{{uid}}')" type="button" class="btn btn-default">View Detail</button></div></td>
+  <button onclick="browseCustomer('{{uid}}')" type="button" class="btn btn-primary btn-default">View Detail</button></div></td>
              {{/properties}}
         </tr>
  {{/entries}}
